# M2HTML

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_MANIFEST.md  README.md  SECURITY.md
assets/: README.md
benchmarks/: benchmark_runner.c
configs/: default.conf
docs/: APIReference.md  Architecture.md  BuildGuide.md  CLIReference.md  CodingStandards.md  ComponentReference.md  ConfigurationGuide.md  DeploymentGuide.md  DesignSystem.md  DeveloperPortal.md  DevelopmentWorkflow.md  FAQ.md  FolderStructure.md  FormatterGuide.md  FormattingGuide.md  FrontendArchitecture.md  HTMLRenderer.md  JSONRenderer.md  Lexer.md  MarkdownGrammar.md  MemoryModel.md  MigrationGuide.md  Parser.md  ParsingPipeline.md  PerformanceGuide.md  PlainTextRenderer.md  PlaygroundGuide.md  PluginArchitecture.md  PluginSDK.md  PreviewServer.md  Profiler.md  ReleaseChecklist.md  ReleaseProcess.md  RendererArchitecture.md  StaticAnalysis.md  SupportPolicy.md  ThemeGuide.md  Tokenizer.md  Troubleshooting.md  VersioningPolicy.md  (+4 more)
examples/: basic_usage.c  render_document.c
plugins/: PluginBuild.md  README.md
release/: CHECKSUMS.txt  RELEASE_NOTES_0.5.0-alpha.md  markforge-0.5.0-alpha-source.tar
scripts/: analyze.sh  check-format.sh  checksum.sh  fuzz.sh  package-release.sh  package.sh  release-notes.sh  release.sh  sanitize.sh  stress.sh  valgrind.sh  version.sh
src/: ast.c  cli.c  cli_app.c  commands.c  common.c  config.c  config_engine.c  containers.c  devtools.c  diagnostics.c  fs.c  hooks.c  logging.c  memory.c  parser.c  platform.c  plugin.c  (+9 more)
(+86 files in other folders)
