cmake_minimum_required(VERSION 3.16)
project(MarkForge VERSION 0.1.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
file(GLOB MARKFORGE_SRC src/*.c)
add_library(markforge STATIC ${MARKFORGE_SRC})
target_include_directories(markforge PUBLIC include)
if(MSVC)
  target_compile_options(markforge PRIVATE /W4)
else()
  target_compile_options(markforge PRIVATE -Wall -Wextra -Wpedantic)
endif()
enable_testing()
file(GLOB MARKFORGE_TESTS tests/*.c)
add_executable(markforge_tests ${MARKFORGE_TESTS})
target_link_libraries(markforge_tests PRIVATE markforge)
add_test(NAME markforge_tests COMMAND markforge_tests)
add_executable(markforge_bench benchmarks/benchmark_runner.c)
target_link_libraries(markforge_bench PRIVATE markforge)
add_executable(markforge_example examples/basic_usage.c)
target_link_libraries(markforge_example PRIVATE markforge)
add_executable(markforge_cli tools/markforge.c)
target_link_libraries(markforge_cli PRIVATE markforge)
add_custom_target(markforge_website_check
  COMMAND ${CMAKE_COMMAND} -E echo "website source tree is present"
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
